--- a/lesson-8/form/Form-start/css/small.css
+++ b/lesson-8/form/Form-start/css/small.css
@@ -98,7 +98,7 @@ form label.sbs {
     color: #555;
 }
 
-form input.submitBtn {
+form input.submit-btn {
     border: none;
     background-color: #9c2c13;
     color: white;
