--- a/lesson4/start-navigation/css/medium.css
+++ b/lesson4/start-navigation/css/medium.css
@@ -1,7 +1,7 @@
 @media only screen and  (min-width: 35em) {
 nav button { display: none;}
 
-nav ul#primaryNav {
+nav ul#primary-nav {
     display: flex;
     margin-left: 2vw;
     
