--- a/bountiful_foods/css/large.css
+++ b/bountiful_foods/css/large.css
@@ -54,9 +54,7 @@
     }
 
     section:nth-child(1) {
-        
         grid-row: 1/2;
-        height: 795px;
         overflow: hidden;
     }
 
@@ -72,7 +70,8 @@
         grid-row: 4/5;
         
         font-size: 1em;
-        padding: 2em 0.5em;
+        padding: 0rem;
+        border-radius: .5rem;
         align-items: center;
         align-content: center;
     }
@@ -81,14 +80,10 @@
         grid-row: 5/5;
         grid-column: 2/3;
         padding-top: 2em;
+        margin: 2rem;
     }
 
 
-    section:nth-child(4) p {
-        grid-row: 3/4;
-        
-        padding-top: 2em;
-    }
 
     #spotlights {
         display: grid;
@@ -115,14 +110,19 @@
         grid-column: 1/2;
     }
 
-    /*    main {
-        margin-bottom: 5em;
-    } */
     section,
     #spotlights {
         min-height: 225px;
     }
 
+    #forecast div {
+        padding: 1rem 2rem;
+    }
+    .company-info-paragraph {
+        left: 15%;
+         width: 170px;
+         height: 270px;
+    }
 
     footer {
         font-size: 0.9em;
