--- a/bountiful_foods/css/medium.css
+++ b/bountiful_foods/css/medium.css
@@ -24,7 +24,7 @@
         font-size: 1.5rem;
     }
 
-    #meeting-message p {
+    #meeting-message p, .weather-wind {
         font-size: .8em;
 
     }
@@ -73,9 +73,9 @@
     }
 
     section:nth-child(5) {
-        grid-row: 6/7;
-        
+
         grid-column: 2/2;
+        grid-row: 6/7;
     }
     #spotlights {
         grid-template-columns: repeat(2,1fr);
@@ -84,12 +84,24 @@
         grid-column: 1/3;
      
     }
+    #forecast {
+        display: flex;
+        margin: 1rem auto;
+    }
+    #forecast {
+        display: flex;
+        margin: 2rem auto;
+        justify-content: center;
+
+    }
 
     .spotlight {
         width: 85%;
     }
     .company-info-paragraph {
-        left: 25%;
+        left: 28%;
+        width: 270px;
+        top: 30%;
     }
 
 
