--- a/bountiful_foods/css/base.css
+++ b/bountiful_foods/css/base.css
@@ -116,7 +116,7 @@ nav {
 }
 
 
-.btn {
+.btns {
     display: flex;
     justify-content: center;
 }
@@ -188,7 +188,7 @@ main {
     margin: 2em auto;
 }
 
-.hero-section img{
+.hero-section img, .slider img{
     width: 100%;
     min-height: 226px;
 
@@ -202,7 +202,7 @@ main {
     object-fit: cover;
 }
 
-.hero-section,.company-info-section {
+.hero-section,.company-info-section, .slider img {
     position: relative;
     border-radius: 0;
 }
@@ -252,7 +252,7 @@ main {
     width: 235px;
 
 }
-section,
+section,.weather-section,
 #spotlights {
     background-color: var(--backgr-main);
     margin: .3em .6em;
@@ -268,6 +268,8 @@ section,
 .weather-section {
     background-color: white;
     border: none;
+    
+    grid-row: 5/5;
 }
 
 p {
@@ -287,7 +289,7 @@ p {
     padding: 0;
 }
 
-section img,
+section img,.weather-section img,
 #spotlights img {
     width: 100%;
     max-width: 80px;
@@ -317,7 +319,7 @@ section:nth-child(3) {
     background-color: white;
     border: none;
     margin: 2rem 1rem;
-
+    grid-row: 3/3;
 }
 
 
@@ -367,7 +369,7 @@ input {
 .orders-card  {
     margin: 1rem;
     overflow: hidden;
-
+    grid-row: 4/4;
 }
 .orders-card img{
     width: 95%;
@@ -823,3 +825,51 @@ iframe {
     max-width: 240px;
     border-radius: .3rem;
 }
+
+
+.slider {
+    width: 100%;
+    grid-column: 1/3;
+    height: 350px;
+    position: relative;
+    overflow: hidden; /* <===  */
+    border-radius: 15px;
+  }
+  
+  .slide {
+    display: grid;
+    justify-items: center;
+    width: 100%;
+
+    height: 350px;
+    position: absolute;
+    transition: all 0.5s;
+  }
+  
+  .slide img {
+    width: 95%;
+    height: 100%;
+    object-fit: cover;
+  }
+  
+  .btn {
+    position: absolute;
+
+    border: none;
+    cursor: pointer;
+    background-color: transparent;
+    font-size: 30px;
+  }
+  .btn:active {
+    transform: scale(1.1);
+  }
+  .btn-prev {
+    top: 45%;
+    left: 5%;
+  }
+  
+  .btn-next {
+    top: 45%;
+    right: 5%;
+  }
+  
