--- a/bountiful_foods/css/medium.css
+++ b/bountiful_foods/css/medium.css
@@ -35,7 +35,7 @@
         padding: .5em ;
     }
 
-    section img,
+    section img,.weather-section img,
     #spotlights img {
         width: 100%;
         max-height: 100px;
@@ -67,12 +67,12 @@
     }
 
 
-    section:nth-child(4) {
-        grid-row: 6/7;
-        grid-column: 1/1;
+    .weather-section {
+        grid-row: 4/5;
+        grid-column: 2/2;
     }
 
-    section:nth-child(5) {
+    section:nth-child(4) {
 
         grid-column: 2/2;
         grid-row: 6/7;
@@ -104,7 +104,13 @@
         top: 30%;
     }
 
-
+    .slider, .slide {
+        height: 450px;
+        overflow: hidden;
+    }
+    .slider {
+        margin: 1rem auto;
+    }
 
     .btn-2 {
         margin: 1em;
