--- a/bountiful_foods/css/base.css
+++ b/bountiful_foods/css/base.css
@@ -202,7 +202,7 @@ main {
     object-fit: cover;
 }
 
-.hero-section,.company-info-section, .slider img {
+.hero-section,.company-info-section {
     position: relative;
     border-radius: 0;
 }
@@ -237,6 +237,7 @@ main {
 .orders-card {
     background: var(--constrast-backgr-main);
     margin: 1rem;
+    height: fit-content;
 }
 
 #forecast {
@@ -830,17 +831,19 @@ iframe {
 .slider {
     width: 100%;
     grid-column: 1/3;
+        margin: 1rem auto;
     height: 350px;
     position: relative;
     overflow: hidden; /* <===  */
     border-radius: 15px;
+ 
   }
   
   .slide {
     display: grid;
     justify-items: center;
     width: 100%;
-
+    border-radius: 1rem;
     height: 350px;
     position: absolute;
     transition: all 0.5s;
@@ -849,6 +852,7 @@ iframe {
   .slide img {
     width: 95%;
     height: 100%;
+   
     object-fit: cover;
   }
   
