--- a/bountiful_foods/css/large.css
+++ b/bountiful_foods/css/large.css
@@ -64,7 +64,8 @@
     }
     section:nth-child(3) img {
         width: 100%;
-    }
+        height: 550px;
+        }
     section:nth-child(3) {
         display: grid;
         grid-row: 4/5;
@@ -141,7 +142,7 @@
     .company-info-paragraph {
         left: 15%;
          width: 170px;
-         height: 270px;
+         height: fit-content;
     }
 
     footer {
