adding styling even more

--- a/bountiful_foods/css/medium.css
+++ b/bountiful_foods/css/medium.css
@@ -196,7 +196,7 @@
 
 
     .main-join, .order, .orders  {
-        box-shadow: 1px 5px 10px var(--backgr-main);
+        box-shadow:  1px 5px 10px var(--constrast-backgr-main);
         padding: 1em;
         margin: 1rem auto;
         border: none
