--- a/bountiful_foods/css/base.css
+++ b/bountiful_foods/css/base.css
@@ -512,7 +512,7 @@ img[data-src] {
 
 .heading-join {
 
-    background-color: var(--backgr-subheadings);
+    background-color: var(--constrast-backgr-main);
     box-shadow: 1px 1px 5px var(--constrast-backgr-main);
     color: white;
     padding: .5em;
@@ -528,9 +528,7 @@ img[data-src] {
     transition: .5s;
     color: var(--backgr-main);
 }
-.main-join {
-    background-image: url(https://st2.depositphotos.com/7908382/11371/i/950/depositphotos_113716684-stock-photo-old-light-brown-wooden-fence.jpg)
-}
+
 .orders div {
     border: solid 3px var(--constrast-backgr-main);
     padding: .7rem; 
@@ -584,7 +582,7 @@ textarea {
     margin: 1em auto;
     border-radius: .2em;
     font-size: 1em;
-   
+    border: solid 2px var(--distintive-color);
 }
 
 form label.top input:required {
