--- a/bountiful_foods/css/base.css
+++ b/bountiful_foods/css/base.css
@@ -200,6 +200,8 @@ main {
     max-height: none;
     min-height: 450px;
     object-fit: cover;
+        width: 100%;
+    height: 100%;
 }
 
 .hero-section,.company-info-section {
@@ -232,6 +234,7 @@ main {
     text-align: center;
     font-size: .6em;
     cursor: pointer;
+    padding: 0.4rem;
 }
 
 .orders-card {
@@ -293,10 +296,13 @@ p {
 section img,.weather-section img,
 #spotlights img {
     width: 100%;
-    max-width: 80px;
-    max-height: 80px;
+    width: 80px;
+    height: 80px;
 }
-
+#forecast div  img{
+    width: 50px;
+    height: 50px;
+}
 .images {
     display: flex;
     justify-content: space-around;
@@ -376,7 +382,6 @@ input {
     width: 95%;
     max-height: none;
     max-width: none;
-    margin: 1rem;
     border-radius: .3rem;
 
 }
