--- a/bountiful_foods/css/medium.css
+++ b/bountiful_foods/css/medium.css
@@ -35,11 +35,14 @@
         padding: .5em ;
     }
 
-    section img,.weather-section img,
+    section img,
     #spotlights img {
         width: 100%;
         max-height: 100px;
+            height: auto;
     }
+
+    
     #more-info {
         border: solid 2px var(--constrast-backgr-main);
         margin: .3rem;
@@ -84,10 +87,7 @@
         grid-column: 1/3;
      
     }
-    #forecast {
-        display: flex;
-        margin: 1rem auto;
-    }
+  
     #forecast {
         display: flex;
         margin: 2rem auto;
