hero image optimization and adjusting medias

--- a/bountiful_foods/css/base.css
+++ b/bountiful_foods/css/base.css
@@ -27,8 +27,9 @@ header {
 }
 
 picture {
-   
-    justify-items: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     margin: 1rem;
 }
 #meeting-message {
