--- a/bountiful_foods/css/base.css
+++ b/bountiful_foods/css/base.css
@@ -8,7 +8,6 @@
     --distintive-color: #82c0cc;
 }
 
-
 body {
     display: grid;
     grid-template-columns: 1fr;
@@ -459,49 +458,6 @@ img[data-src] {
     transition: filter 0.2s;
 }
 
-.discover-img {
-    border: solid 1px var(--backgr-subheadings);
-    width: 90%;
-    align-self: center;
-    filter: blur(0em);
-    transition: filter 0.1s;
-    margin: .3em auto;
-    border-radius: 0.2em;
-    transition: .8s all ease-in-out;
-}
-
-.discover-img:hover {
-    box-shadow: 8px 7px 9px 2px gray;
-    -webkit-transform: translateX(-5px);
-    transform: translateX(-5px);
-    transition: .7s ease;
-}
-
-
-
-.building {
-    margin: 0.5em;
-    text-align: center;
-}
-
-.building p {
-    padding: .5em;
-}
-
-.building ul,
-.building p {
-    font-size: .8em;
-    text-align: left;
-    margin: 0 1em;
-    border: solid 1px var(--constrast-backgr-main);
-    border-radius: .3em;
-    margin-top: .3em;
-}
-
-.building li {
-    padding: .7em;
-
-}
 
 .heading-discover {
     text-align: center;
@@ -548,6 +504,7 @@ img[data-src] {
 .form-join {
     align-self: center;
     margin: 2em auto;
+    text-align: center;
     font-weight: bold;
 }
 
@@ -568,6 +525,7 @@ form input {
     border-radius: .3em;
     background-color: var(--backgr-main);
     text-decoration: none;
+    justify-self: center;
 }
 
 a {
@@ -669,140 +627,6 @@ label.top {
     color: var(--backgr-subheadings);
     opacity: 1;
 }
-
-
-/* ================ DIRECTORY PAGE ==================== */
-
-
-
-#main-directory {
-    margin: 2.5rem 0;
-    border: 1px solid #bbb;
-    padding: 0.5rem;
-    max-width: 700px;
-    background-color: #eee;
-    position: relative;
-
-}
-
-.menu {
-    margin: 1rem auto;
-    border: 2px solid var(--constrast-backgr-main);
-    border-radius: .5rem;
-    padding: 0.5rem;
-    text-align: center;
-    color: var(--backgr-main);
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    max-width: 1000px;
-}
-
-.menu img {
-    width: 40px;
-    height: 40px;
-    padding: .5rem;
-    border: solid 2px var(--backgr-main);
-    border-radius: .5rem;
-}
-
-#main-directory .discovery-section {
-    margin: 0.75rem;
-}
-
-.company {
-    margin: 1rem;
-    padding: 0.35rem;
-    color: var(--backgr-main);
-    flex-direction: column;
-    align-items: center;
-    font-size: .8rem;
-    border-radius: .3rem;
-    min-width: 225px;
-    max-width: 250px;
-    max-height: 350px;
-}
-
-.company:nth-child(odd) {
-    box-shadow: 4px 7px 8px 3px var(--backgr-subheadings);
-}
-
-.company:nth-child(even) {
-    box-shadow: 4px 7px 8px 3px var(--constrast-backgr-main);
-}
-
-
-.grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    justify-content: center;
-    justify-items: center;
-    grid-column: 2/3;
-    transition: 1s all ease-in-out;
-    margin: 0 auto;
-}
-
-.list {
-    display: flex;
-    flex-direction: column;
-    max-width: 1000px;
-    align-items: center;
-    margin: 0 auto;
-    transform: translateX(5px);
-    transition: 1s ease;
-}
-
-.list .company {
-    display: flex;
-    align-items: flex-start;
-    margin: 1.5em;
-
-}
-
-.grid .company {
-    text-align: center;
-    justify-content: center;
-}
-
-.grid .company>* {
-    margin: 0.7rem 0.1rem;
-}
-
-
-.list .company>* {
-    margin: .7rem .5rem;
-    text-align: left;
-}
-
-.list .company img {
-    display: none;
-    /* smaller viewports only */
-}
-
-.company h3 {
-    font-size: 1.5rem;
-}
-
-.company a {
-    font-size: .9em;
-    color: var(--backgr-main);
-    text-decoration: underline;
-}
-
-
-.company img {
-    border-radius: .3rem;
-    width: 70px;
-    height: 70px;
-
-}
-
-@media (min-width: 700px) {
-    .list .company img {
-        display: block;
-    }
-}
-
 
 /* =================== CONTACT PAGE ============================== */
 #contact-page .heading-join,
