--- a/bountiful_foods/css/base.css
+++ b/bountiful_foods/css/base.css
@@ -523,11 +523,13 @@ form input {
     border: solid 1px var(--backgr-main);
     padding: .5em;
     border-radius: .3em;
-    background-color: var(--backgr-main);
+    background-color:  var(--constrast-backgr-main);
     text-decoration: none;
     justify-self: center;
 }
-
+.orders-card h2 {
+    background-color:  var(--backgr-main);
+}
 a {
     text-decoration: none;
 }
@@ -571,7 +573,7 @@ label.top {
 
 .main-thanks {
     display: flex;
-    color: var(--backgr-main);
+    color: var(--constrast-backgr-main);
 
     margin: 2em auto;
 
@@ -599,16 +601,17 @@ label.top {
     margin: 1.5em;
     padding: 2em 1em;
     border-radius: .5em;
-    box-shadow: 1px 5px 10px var(--backgr-main);
+    box-shadow: 1px 5px 10px var(--distintive-color);
     color: var(--backgr-main);
     text-align: left;
 }
 
 .membership-div {
-    max-width: 300px;
-    margin: 2rem 1rem;
+    max-width: 270px;
+    margin: 1rem auto;
     font-size: .8rem;
-    padding: 0.5rem 1rem;
+    padding: 0.5rem ;
+   
 }
 
 .membership-div h3 {
@@ -639,6 +642,7 @@ label.top {
     background-color: var(--backgr-main);
     color: white;
     box-shadow: 3px 5px 6px 4px var(--backgr-subheadings);
+    text-align: center;
 }
 
 #contact-page ul {
@@ -647,20 +651,23 @@ label.top {
 }
 
 .membership-div img {
-    width: 300px;
+    width: 270px;
     height: 168px;
+    object-fit:contain;
     border-radius: .3rem;
 }
 
 .map {
     max-width: 800px;
     border: solid 3px var(--backgr-subheadings);
-    border-radius: 1rem;
+    border-radius: 0.5rem;
+
 }
 
 iframe {
-    max-width: 240px;
+    max-width: 280px;
     border-radius: .3rem;
+    margin: 0 auto;
 }
 
 
