--- a/bountiful_foods/css/medium.css
+++ b/bountiful_foods/css/medium.css
@@ -218,18 +218,20 @@
     .thanks-div {
         margin: 10em 1em;
         padding: 3em;
-        box-shadow: 1px 5px 10px var(--backgr-main);
+        box-shadow: 1px 5px 20px var(--distintive-color);
 
     }
 
     .thanks-div h1 {
         margin: 1.5em auto;
     }
-
+    .map {
+        margin: 1rem auto;
+    }
  
     iframe {
         max-width: 480px;
-        margin: 1rem auto;
+   
     }
 
 }
