--- a/bountiful_foods/css/base.css
+++ b/bountiful_foods/css/base.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto+Mono:wght@300;400&display=swap');
 
 :root {
-    --backgr-main:#16697a;
+    --backgr-main: #16697a;
     --backgr-subheadings: #489fb5;
     --constrast-backgr-main: #ffa62b;
     --constrast-backgr-subh: #ede7e3;
@@ -31,6 +31,7 @@ picture {
     justify-content: center;
     margin: 1rem;
 }
+
 #meeting-message {
     background-color: var(--constrast-backgr-main);
     color: var(--backgr-main);
@@ -193,7 +194,8 @@ main {
     margin: 0em auto;
 }
 
-.hero-section img, .slider img{
+.hero-section img,
+.slider img {
     width: 100%;
     min-height: 226px;
 
@@ -205,11 +207,12 @@ main {
     max-height: none;
     min-height: 450px;
     object-fit: cover;
-        width: 100%;
+    width: 100%;
     height: 100%;
 }
 
-.hero-section,.company-info-section {
+.hero-section,
+.company-info-section {
     position: relative;
     border-radius: 0;
 }
@@ -227,7 +230,8 @@ main {
     text-shadow: 1px 1px var(--backgr-main);
 }
 
-.join-btn, .company-info-paragraph {
+.join-btn,
+.company-info-paragraph {
     position: absolute;
     color: var(--backgr-main);
     top: 85%;
@@ -261,7 +265,9 @@ main {
     width: 235px;
 
 }
-section,.weather-section,
+
+section,
+.weather-section,
 #spotlights {
     background-color: var(--backgr-main);
     margin: .3em .6em;
@@ -277,7 +283,7 @@ section,.weather-section,
 .weather-section {
     background-color: white;
     border: none;
-    
+
     grid-row: 5/5;
 }
 
@@ -298,16 +304,19 @@ p {
     padding: 0;
 }
 
-section img,.weather-section img,
+section img,
+.weather-section img,
 #spotlights img {
     width: 100%;
     width: 80px;
     height: 80px;
 }
-#forecast div  img{
+
+#forecast div img {
     width: 50px;
     height: 50px;
 }
+
 .images {
     display: flex;
     justify-content: space-around;
@@ -327,7 +336,8 @@ section:nth-child(1) img {
     border-radius: 0.5rem;
     object-fit: cover;
 }
-section:nth-child(3) { 
+
+section:nth-child(3) {
     background-color: white;
     border: none;
     margin: 2rem 1rem;
@@ -359,7 +369,8 @@ input {
 
 }
 
-#forecast  div, .current-weather {
+#forecast div,
+.current-weather {
     box-shadow: 2px 3px 6px 5px var(--distintive-color);
 
     padding: 0.5rem;
@@ -368,7 +379,9 @@ input {
     border-radius: 0.5rem;
 }
 
-.weather-wind, .order-subtitle, .orders .order-subtitle {
+.weather-wind,
+.order-subtitle,
+.orders .order-subtitle {
     display: flex;
     align-items: center;
     justify-content: space-evenly;
@@ -378,12 +391,14 @@ input {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
 }
-.orders-card  {
+
+.orders-card {
     margin: 1rem;
     overflow: hidden;
     grid-row: 4/4;
 }
-.orders-card img{
+
+.orders-card img {
     width: 95%;
     max-height: none;
     max-width: none;
@@ -404,7 +419,8 @@ input {
     padding: .5em;
 }
 
-.spotlight, .ordered-fruit {
+.spotlight,
+.ordered-fruit {
     background: var(--backgr-subheadings);
     border: solid 1px var(--backgr-main);
     margin: 0.5em 0.7em;
@@ -487,7 +503,9 @@ img[data-src] {
     border-radius: .5em;
 }
 
-.main-join,  .orders div, .orders  {
+.main-join,
+.orders div,
+.orders {
     margin: 1em auto;
     display: block;
     padding: 0.5em;
@@ -498,7 +516,7 @@ img[data-src] {
 
 .orders div {
     border: solid 3px var(--constrast-backgr-main);
-    padding: .7rem; 
+    padding: .7rem;
 }
 
 .form-join {
@@ -515,7 +533,8 @@ form input {
 
 }
 
-.submit-btn, .orders-card h2 {
+.submit-btn,
+.orders-card h2 {
     width: 80%;
     margin: .5em;
     transition: 0.7s;
@@ -523,21 +542,25 @@ form input {
     border: solid 1px var(--backgr-main);
     padding: .5em;
     border-radius: .3em;
-    background-color:  var(--constrast-backgr-main);
+    background-color: var(--constrast-backgr-main);
     text-decoration: none;
     justify-self: center;
 }
+
 .orders-card h2 {
-    background-color:  var(--backgr-main);
+    background-color: var(--backgr-main);
 }
+
 a {
     text-decoration: none;
 }
+
 .subtitle {
     list-style: none;
     margin: .5rem 0rem;
     width: 220px;
 }
+
 .submit-btn:hover {
     width: 90%;
     transition: 0.7s;
@@ -610,8 +633,8 @@ label.top {
     max-width: 270px;
     margin: 1rem auto;
     font-size: .8rem;
-    padding: 0.5rem ;
-   
+    padding: 0.5rem;
+
 }
 
 .membership-div h3 {
@@ -653,7 +676,7 @@ label.top {
 .membership-div img {
     width: 270px;
     height: 168px;
-    object-fit:contain;
+    object-fit: contain;
     border-radius: .3rem;
 }
 
@@ -674,15 +697,16 @@ iframe {
 .slider {
     width: 100%;
     grid-column: 1/3;
-        margin: 1rem auto;
+    margin: 1rem auto;
     height: 350px;
     position: relative;
-    overflow: hidden; /* <===  */
+    overflow: hidden;
+    /* <===  */
     border-radius: 15px;
- 
-  }
-  
-  .slide {
+
+}
+
+.slide {
     display: grid;
     justify-items: center;
     width: 100%;
@@ -690,33 +714,34 @@ iframe {
     height: 350px;
     position: absolute;
     transition: all 0.5s;
-  }
-  
-  .slide img {
+}
+
+.slide img {
     width: 100%;
     height: 100%;
-  
+
     object-fit: cover;
-  }
-  
-  .btn {
+}
+
+.btn {
     position: absolute;
 
     border: none;
     cursor: pointer;
     background-color: transparent;
     font-size: 30px;
-  }
-  .btn:active {
+}
+
+.btn:active {
     transform: scale(1.1);
-  }
-  .btn-prev {
+}
+
+.btn-prev {
     top: 45%;
     left: 5%;
-  }
-  
-  .btn-next {
+}
+
+.btn-next {
     top: 45%;
     right: 5%;
-  }
-  
+}
