--- a/bountiful_foods/css/medium.css
+++ b/bountiful_foods/css/medium.css
@@ -24,7 +24,8 @@
         font-size: 1.5rem;
     }
 
-    #meeting-message p, .weather-wind {
+    #meeting-message p,
+    .weather-wind {
         font-size: .8em;
 
     }
@@ -32,21 +33,22 @@
     .join-btn,
     .welcome-message {
         font-size: .9em;
-        padding: .5em ;
+        padding: .5em;
     }
 
     section img,
     #spotlights img {
         width: 100%;
         max-height: 100px;
-            height: auto;
+        height: auto;
     }
 
-    
+
     #more-info {
         border: solid 2px var(--constrast-backgr-main);
         margin: .3rem;
     }
+
     section:nth-child(1) {
         grid-column: 1/3;
     }
@@ -62,7 +64,7 @@
         grid-row: 3/4;
         grid-column: 1/3;
         font-size: .6em;
-        
+
     }
 
     section:nth-child(3) img {
@@ -80,14 +82,15 @@
         grid-column: 2/2;
         grid-row: 6/7;
     }
+
     #spotlights {
-        grid-template-columns: repeat(2,1fr);
+        grid-template-columns: repeat(2, 1fr);
         display: grid;
         grid-row: 2/3;
         grid-column: 1/3;
-     
+
     }
-  
+
     #forecast {
         display: flex;
         margin: 2rem auto;
@@ -98,16 +101,19 @@
     .spotlight {
         width: 85%;
     }
+
     .company-info-paragraph {
         left: 28%;
         width: 270px;
         top: 30%;
     }
 
-    .slider, .slide {
+    .slider,
+    .slide {
         height: 550px;
         overflow: hidden;
     }
+
     .slider {
         margin: 1rem auto;
     }
@@ -177,8 +183,10 @@
     /* ============== JOIN PAGE ================ */
 
 
-    .main-join, .order, .orders  {
-        box-shadow:  1px 5px 10px var(--constrast-backgr-main);
+    .main-join,
+    .order,
+    .orders {
+        box-shadow: 1px 5px 10px var(--constrast-backgr-main);
         padding: 1em;
         margin: 1rem auto;
         border: none
@@ -201,6 +209,7 @@
         width: 100%;
         height: auto;
     }
+
     form input {
         width: 90%;
     }
@@ -225,13 +234,14 @@
     .thanks-div h1 {
         margin: 1.5em auto;
     }
+
     .map {
         margin: 1rem auto;
     }
- 
+
     iframe {
         max-width: 480px;
-   
+
     }
 
 }
